--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -1,7 +1,7 @@
 .post-page-main {
     display: grid;
-    grid-gap: 2rem;
-    grid-template-columns: 300px auto 1fr;
+    grid-gap: 20px;
+    grid-template-columns: 300px 1fr;
 }
 
 .heading {
@@ -9,7 +9,7 @@
 }
 
 .sidebar {
-    width: 100%;
+    width: 300px;
 }
 
 @media only screen and (max-width: 850px) {
